<resources>
    <string name="app_name">币圈儿</string>

    <string name="login_title">登录币圈儿</string>
    <string name="input_phone">请输入手机号</string>
    <string name="input_pwd">请输登录密码</string>
    <string name="login_btn_text">立即登录</string>
    <string name="forgot_pwd">忘记密码</string>
    <string name="register_now">立即注册</string>
    <string name="login_other_type">其他方式登录</string>
    <string name="login_phone_start">+86</string>

    <string name="register_title">注册</string>
    <string name="register_input_yzm">请输入验证码</string>
    <string name="register_get_yzm">获取验证码</string>
    <string name="register_input_pwd">请输入6-20位密码</string>
    <string name="register_next">下一步</string>
    <string name="register_go_login">已有账号登录</string>
    <string name="register_server_protocol">《币车车平台注册服务协议》</string>
    <string name="register_server_protocol_left">注册表示同意</string>

    <string name="main_cfmm">财富密码</string>
    <string name="main_jb">荐币</string>
    <string name="main_kt">空投</string>
    <string name="main_xm">项目</string>
    <string name="main_rm">热门</string>

    <string name="sm_msg">私募消息</string>
    <string name="system_msg">最新空投</string>
    <string name="kt_msg">系统消息</string>





    // 云通信
    <string name="chat_top">置顶聊天</string>
    <string name="chat_delete">删除聊天</string>
    <string name="quit_chat_top">取消置顶</string>

    // 登录相关
    <string name="account">用户名</string>
    <string name="password">密码</string>

    // "我"相关
    <string name="profile">我</string>
    <string name="id">账号：%1$s</string>
    <string name="modify_user_icon">修改头像</string>
    <string name="modify_nick_name">修改昵称</string>
    <string name="modify_signature">修改个性签名</string>
    <string name="add_rule">加我为好友时</string>
    <string name="allow_type_allow_any">允许任何人</string>
    <string name="allow_type_deny_any">拒绝任何人</string>
    <string name="allow_type_need_confirm">需要验证</string>
    <string name="exit">退出登录</string>
    <string name="about_im">关于即时通信IM</string>

    // 主页Tab相关
    <string name="tab_contact_tab_text">通讯录</string>
    <string name="tab_conversation_tab_text">消息</string>
    <string name="tab_profile_tab_text">我</string>

    // "+"menu相关
    <string name="add_friend">添加好友</string>
    <string name="add_group">添加群聊</string>
    <string name="start_conversation">发起会话</string>
    <string name="create_group_chat">创建群聊</string>
    <string name="create_chat_room">创建聊天室</string>
    <string name="create_private_group">创建讨论组</string>
    <string name="hint_add_user_id">请输入ID</string>
    <string name="hint_add_wording">请输入验证消息</string>
    <string name="contact_add">添加</string>
    <string name="user_id">对方ID</string>
    <string name="add_wording">验证消息</string>

    // 群信息相关
    <string name="tips_empty_group_member">请选择群成员</string>
    <string name="tips_empty_group_type">请选择加群方式</string>
    <string name="no_friend_apply">暂无好友申请</string>


    // 新朋友
    <string name="request_agree">同意</string>
    <string name="request_accepted">已接受</string>
    <string name="request_waiting">等待验证</string>

    <string name="test_custom_action">自定义消息</string>
    <string name="test_custom_message">查看详情</string>
    <string name="custom_message_hb">发红包</string>
    <string name="custom_message_jy">发起交易</string>

    <string name="add_new_friends">添加币友</string>
    <string name="create_new_group">新建群</string>
    <string name="create_new_kol_group">新建KOL群</string>
    <string name="sys">扫一扫</string>
    <string name="txl">通讯录></string>



    <string name="action_settings">Change Data</string>
    <string name="section_format">Show Data : %1$s</string>
    <string name="laoyao">红包</string>
    <string name="laowang">老王</string>
    <string name="laoliu">老柳</string>
    <string name="laoguo">老郭</string>
    <string name="laochen">老陈</string>
    <string name="laorao">老饶</string>


</resources>
