<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    >

    <TextView
        android:id="@+id/tv_login_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/loginTitle"
        android:layout_marginTop="124dp"
        android:layout_marginStart="36dp"
        android:text="@string/login_title"
        android:textColor="@color/colorLoginTitle"
        android:textStyle="bold"
        />
    <ImageView
        android:scaleType="fitXY"
        android:id="@+id/iv_login_close"
        android:layout_width="16dp"
        android:layout_height="16dp"
        android:src="@drawable/close"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:layout_alignParentEnd="true"
        />
    <LinearLayout
        android:id="@+id/ll_phone_input"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_below="@id/tv_login_title"
        android:layout_marginTop="48dp"
        android:layout_marginStart="36dp"
        android:layout_marginEnd="36dp"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/loginEditText"
            android:textColor="@color/colorLoginTitle"
            android:text="@string/login_phone_start"
            />
        <View
            android:layout_width="1dp"
            android:layout_height="10dp"
            android:layout_marginStart="11dp"
            android:layout_marginEnd="11dp"
            android:background="@color/colorLoginLine"
            />
        <EditText
            android:id="@+id/et_login_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:hint="@string/input_phone"
            android:textColorHint="@color/colorLoginEditHint"
            android:textColor="@color/colorLoginTitle"
            android:textSize="@dimen/loginEditText"
            android:inputType="phone"
            />
    </LinearLayout>
    <View
        android:id="@+id/v_login_line1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="36dp"
        android:layout_marginEnd="36dp"
        android:layout_below="@id/ll_phone_input"
        android:background="@color/colorLoginLine"
        />
    <LinearLayout
        android:id="@+id/ll_pwd_input"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_below="@id/v_login_line1"
        android:layout_marginStart="36dp"
        android:layout_marginEnd="36dp"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        >
        <EditText
            android:id="@+id/et_login_pwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:hint="@string/input_pwd"
            android:textColorHint="@color/colorLoginEditHint"
            android:textColor="@color/colorLoginTitle"
            android:textSize="@dimen/loginEditText"
            />
    </LinearLayout>
    <View
        android:id="@+id/v_login_line2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="36dp"
        android:layout_marginEnd="36dp"
        android:layout_below="@id/ll_pwd_input"
        android:background="@color/colorLoginLine"
        />
    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginStart="36dp"
        android:layout_marginEnd="36dp"
        android:layout_below="@id/v_login_line2"
        android:layout_marginTop="40dp"
        android:background="@drawable/login_btn_bg"
        android:textSize="@dimen/loginEditText"
        android:textColor="@color/white"
        android:text="@string/login_btn_text"
        />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_login"
        android:layout_marginTop="26dp"
        >
        <View
            android:id="@+id/v_login_line3"
            android:layout_centerInParent="true"
            android:layout_width="1dp"
            android:layout_height="10dp"
            android:background="@color/colorLoginLine"
            />
        <TextView
            android:id="@+id/tv_login_forgot_pwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/loginEditText"
            android:textColor="@color/colorLoginOtherText"
            android:layout_toStartOf="@id/v_login_line3"
            android:layout_marginEnd="16dp"
            android:text="@string/forgot_pwd"
            />
        <TextView
            android:id="@+id/tv_login_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/loginEditText"
            android:textColor="@color/colorLoginOtherText"
            android:layout_toEndOf="@id/v_login_line3"
            android:layout_marginStart="16dp"
            android:text="@string/register_now"
            />
    </RelativeLayout>

</RelativeLayout>