<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    >

    <RelativeLayout
        android:id="@+id/rl_register_back"
        android:layout_width="44dp"
        android:layout_height="44dp"
        >
        <ImageView
            android:layout_width="12dp"
            android:layout_height="20dp"
            android:id="@+id/iv_register_back"
            android:src="@drawable/back"
            android:layout_centerInParent="true"
            android:scaleType="fitXY"
            />
    </RelativeLayout>
    <TextView
        android:id="@+id/tv_register_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/loginTitle"
        android:layout_marginTop="64dp"
        android:layout_marginStart="36dp"
        android:text="@string/register_title"
        android:textColor="@color/colorLoginTitle"
        android:textStyle="bold"
        />
    <LinearLayout
        android:id="@+id/ll_register_phone_input"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:layout_below="@id/tv_register_title"
        android:layout_marginTop="50dp"
        android:layout_marginStart="36dp"
        android:layout_marginEnd="36dp"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/loginEditText"
            android:textColor="@color/colorLoginTitle"
            android:text="@string/login_phone_start"
            />
        <View
            android:layout_width="1dp"
            android:layout_height="10dp"
            android:layout_marginStart="11dp"
            android:layout_marginEnd="11dp"
            android:background="@color/colorLoginLine"
            />
        <EditText
            android:id="@+id/et_register_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:hint="@string/input_phone"
            android:textColorHint="@color/colorLoginEditHint"
            android:textColor="@color/colorLoginTitle"
            android:textSize="@dimen/loginEditText"
            android:inputType="phone"
            android:maxLength="11"
            />
    </LinearLayout>
    <View
        android:id="@+id/v_login_line1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="36dp"
        android:layout_marginEnd="36dp"
        android:layout_below="@id/ll_register_phone_input"
        android:background="@color/colorLoginLine"
        />
    <LinearLayout
        android:id="@+id/ll_register_yzm_input"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:layout_below="@id/v_login_line1"
        android:layout_marginStart="36dp"
        android:layout_marginEnd="36dp"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        >
        <EditText
            android:id="@+id/et_register_yzm"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:background="@null"
            android:hint="@string/register_input_yzm"
            android:textColorHint="@color/colorLoginEditHint"
            android:textColor="@color/colorLoginTitle"
            android:textSize="@dimen/loginEditText"
            android:inputType="number"
            android:maxLength="6"
            />
        <Button
            android:id="@+id/btn_register_get_yzm"
            android:layout_width="80dp"
            android:layout_height="24dp"
            android:background="@drawable/btn_bg_getyzm"
            android:textSize="12sp"
            android:text="@string/register_get_yzm"
            android:textColor="@color/colorLoginBtn"
            />
    </LinearLayout>

    <View
        android:id="@+id/v_register_line2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="36dp"
        android:layout_marginEnd="36dp"
        android:layout_below="@id/ll_register_yzm_input"
        android:background="@color/colorLoginLine"
        />

    <LinearLayout
        android:id="@+id/ll_register_pwd_input"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:layout_below="@id/v_register_line2"
        android:layout_marginStart="36dp"
        android:layout_marginEnd="36dp"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        >
        <EditText
            android:id="@+id/et_register_pwd"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:background="@null"
            android:hint="@string/register_input_pwd"
            android:textColorHint="@color/colorLoginEditHint"
            android:textColor="@color/colorLoginTitle"
            android:textSize="@dimen/loginEditText"
            android:maxLength="20"
            />
        <ImageView
            android:layout_width="20dp"
            android:layout_height="10dp"
            android:src="@drawable/eye_close"
            android:scaleType="fitXY"
            />
    </LinearLayout>
    <View
        android:id="@+id/v_register_line3"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="36dp"
        android:layout_marginEnd="36dp"
        android:layout_below="@id/ll_register_pwd_input"
        android:background="@color/colorLoginLine"
        />

    <LinearLayout
        android:id="@+id/ll_yqm"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:layout_below="@id/ll_register_pwd_input"
        android:layout_marginStart="36dp"
        android:layout_marginEnd="36dp"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        >
        <EditText
            android:id="@+id/et_register_yqm"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:background="@null"
            android:hint="请输入邀请码（选填）"
            android:textColorHint="@color/colorLoginEditHint"
            android:textColor="@color/colorLoginTitle"
            android:textSize="@dimen/loginEditText"
            android:maxLength="20"
            />

    </LinearLayout>
    <View
        android:id="@+id/v_register_line4"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="36dp"
        android:layout_marginEnd="36dp"
        android:layout_below="@id/ll_yqm"
        android:background="@color/colorLoginLine"
        />
    <Button
        android:id="@+id/btn_register_next"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:background="@drawable/btn_bg_register_next_noclick"
        android:layout_marginStart="36dp"
        android:layout_marginEnd="36dp"
        android:layout_below="@id/v_register_line4"
        android:layout_marginTop="40dp"
        android:text="@string/register_now"
        android:textColor="@color/white"
        android:textSize="@dimen/loginEditText"
        />

    <TextView
        android:id="@+id/tv_register_go_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/btn_register_next"
        android:layout_marginTop="16dp"
        android:textSize="14sp"
        android:textColor="@color/colorLoginOtherText"
        android:text="@string/register_go_login"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="40dp"
        android:orientation="horizontal"
        android:gravity="center"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textColor="@color/colorLoginOtherText"
            android:text="@string/register_server_protocol_left"

            />
        <TextView
            android:id="@+id/tv_register_protocol"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textColor="@color/colorLoginBtn"
            android:text="@string/register_server_protocol"

            />
    </LinearLayout>
</RelativeLayout>
