<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f8f8f8"
    >

    <EditText
        android:layout_marginTop="15dp"
        android:id="@+id/et_search"
        android:hint="请输入搜索内容"
        android:textSize="14sp"
        android:textColorHint="@color/colorLoginEditHint"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="36dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/main_search_bg"
        android:drawableStart="@drawable/search"
        android:drawablePadding="5dp"
        />
    <ScrollView
        android:layout_marginTop="10dp"
        android:layout_below="@id/et_search"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <LinearLayout
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"

            >

            <LinearLayout
                android:layout_marginTop="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingEnd="16dp"
                android:paddingStart="16dp"
                >

                <FrameLayout
                    android:id="@+id/frameLayout"
                    android:layout_width="match_parent"
                    android:layout_height="134dp"

                    >

                    <androidx.viewpager.widget.ViewPager
                        android:id="@+id/viewPager"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        tools:layout_editor_absoluteX="8dp"
                        tools:layout_editor_absoluteY="0dp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="35dip"
                        android:layout_gravity="bottom"
                        android:gravity="center"
                        android:orientation="horizontal"

                        android:weightSum="10">
                        <LinearLayout
                            android:id="@+id/lineLayout_dot"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="2"
                            android:gravity="center"
                            android:orientation="horizontal"
                            android:paddingLeft="3dp"
                            android:paddingRight="3dp">

                        </LinearLayout>

                    </LinearLayout>

                </FrameLayout>

                <LinearLayout
                    android:layout_marginTop="16dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    >
                    <LinearLayout
                        android:id="@+id/ll_cfmm"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:gravity="center_horizontal"
                        >
                        <ImageView
                            android:id="@+id/iv_cfmm"
                            android:layout_width="48dp"
                            android:layout_height="48dp"
                            android:src="@drawable/cfma"
                            />
                        <TextView
                            android:id="@+id/tv_cfmm"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:text="@string/main_cfmm"
                            android:textColor="@color/color_main_icon_text"
                            android:textSize="12sp"
                            />
                    </LinearLayout>
                    <View
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="1dp"
                        />
                    <LinearLayout
                        android:id="@+id/ll_jb"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:gravity="center_horizontal"
                        >
                        <ImageView
                            android:id="@+id/iv_jb"
                            android:layout_width="48dp"
                            android:layout_height="48dp"
                            android:src="@drawable/jb"
                            />
                        <TextView
                            android:id="@+id/tv_jb"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:text="@string/main_jb"
                            android:textColor="@color/color_main_icon_text"
                            android:textSize="12sp"
                            />
                    </LinearLayout>
                    <View
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="1dp"
                        />
                    <LinearLayout
                        android:id="@+id/ll_kt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:gravity="center_horizontal"
                        >
                        <ImageView
                            android:id="@+id/iv_kt"
                            android:layout_width="48dp"
                            android:layout_height="48dp"
                            android:src="@drawable/kt"
                            />
                        <TextView
                            android:id="@+id/tv_kt"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:text="@string/main_kt"
                            android:textColor="@color/color_main_icon_text"
                            android:textSize="12sp"
                            />
                    </LinearLayout>
                    <View
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="1dp"
                        />
                    <LinearLayout
                        android:id="@+id/ll_xm"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:gravity="center_horizontal"
                        >
                        <ImageView
                            android:id="@+id/iv_xm"
                            android:layout_width="48dp"
                            android:layout_height="48dp"
                            android:src="@drawable/xm"
                            />
                        <TextView
                            android:id="@+id/tv_xm"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:text="@string/main_xm"
                            android:textColor="@color/color_main_icon_text"
                            android:textSize="12sp"
                            />
                    </LinearLayout>
                    <View
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="1dp"
                        />
                    <LinearLayout
                        android:id="@+id/ll_remen"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:gravity="center_horizontal"
                        >
                        <ImageView
                            android:id="@+id/iv_rm"
                            android:layout_width="48dp"
                            android:layout_height="48dp"
                            android:src="@drawable/rm"
                            />
                        <TextView
                            android:id="@+id/tv_rm"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:text="@string/main_rm"
                            android:textColor="@color/color_main_icon_text"
                            android:textSize="12sp"
                            />
                    </LinearLayout>

                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                >
                <com.google.android.material.tabs.TabLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:id="@+id/tab_layout"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    />

            </LinearLayout>

            <androidx.viewpager.widget.ViewPager
                android:id="@+id/title_view_pager"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                />

        </LinearLayout>

    </ScrollView>
</RelativeLayout>